fix: created the sub municipality controller to isolate sub municipality functions
